[gd_scene load_steps=4 format=3 uid="uid://b03pl0a6yj1w5"]

[ext_resource type="Texture2D" uid="uid://cnjx65wjnuvcc" path="res://Character/Fish/sushi.png" id="1"]
[ext_resource type="Script" path="res://Character/Fish/FirstFish.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(57, 32)

[node name="FirstFish" type="RigidBody2D"]
collision_layer = 2
collision_mask = 32
mass = 0.01
gravity_scale = 0.0
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 0)
shape = SubResource("1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="SwitchDirectionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="SwitchDirectionTimer" to="." method="_on_switch_direction_timer_timeout"]
